--- a/TRAVEL WEBSITE/index.html
+++ b/TRAVEL WEBSITE/index.html
@@ -6,7 +6,7 @@
         <!-- SEO Meta Tags -->
          <meta name ="description" content="Training in Travel - Explore the world with our expert travel guides and tips. Discover new destinations, cultures, and adventures.">
          <meta name="keywords" content="travel, adventure, tourism, travel guides, destinations, cultures, trips">
-         <meta name="author" content="Michael Alula">
+         <meta name="author" content="Training in Travel Team">
         <title>Training in Travel</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="responsive.css">
